samples/_failures_safe/1761297488_0ecfd9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8abd8008.c: In function ‘main’:
./samples/SAFE/__tmp_8abd8008.c:190:13: error: expected declaration or statement at end of input
  190 |             }
      |             ^
./samples/SAFE/__tmp_8abd8008.c:190:13: error: expected declaration or statement at end of input
